--- a/client/package.json
+++ b/client/package.json
@@ -13,7 +13,8 @@
         "@dnd-kit/core": "^6.1.0",
         "@dnd-kit/sortable": "^8.0.0",
         "react": "^18.3.1",
-        "react-dom": "^18.3.1"
+        "react-dom": "^18.3.1",
+        "socket.io-client": "^4.7.5"
     },
     "devDependencies": {
         "@eslint/js": "^9.8.0",
