--- a/client/package.json
+++ b/client/package.json
@@ -18,6 +18,7 @@
     },
     "devDependencies": {
         "@eslint/js": "^9.8.0",
+        "@types/node": "^22.4.1",
         "@types/react": "^18.3.3",
         "@types/react-dom": "^18.3.0",
         "@vitejs/plugin-react": "^4.3.1",
@@ -26,6 +27,7 @@
         "eslint-plugin-react-refresh": "^0.4.9",
         "globals": "^15.9.0",
         "prettier": "^3.3.3",
+        "react-router-dom": "^6.26.1",
         "typescript": "^5.5.3",
         "typescript-eslint": "^8.0.0",
         "vite": "^5.4.0"
