--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "dependencies": {
         "@dnd-kit/core": "^6.1.0",
         "@dnd-kit/sortable": "^8.0.0",
+        "jotai": "^2.9.3",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
         "socket.io-client": "^4.7.5"
