--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
         "jotai": "^2.9.3",
         "react": "^18.3.1",
         "react-dom": "^18.3.1",
+        "react-zoom-pan-pinch": "^3.6.1",
         "socket.io-client": "^4.7.5"
     },
     "devDependencies": {
