--- a/server/package.json
+++ b/server/package.json
@@ -18,6 +18,7 @@
     "typescript-eslint": "^8.1.0"
   },
   "dependencies": {
+    "dotenv": "^16.4.5",
     "express": "^4.19.2",
     "nanoid-esm": "^2.1.0-esm.4",
     "socket.io": "^4.7.5"
