--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,12 @@
-node_modules
-server/dist
+# Ignore node_modules directory
+node_modules/
+
+# Ignore dist directory
+/dist/
+
+# Ignore .env file
 .env
+
+# Ignore JavaScript files (or any files with the .js extension)
+*.js
+*.js.map
